//
//  LocalizedString.swift
//  SwiftCollectionView
//
//  Created by Pranesh on 2018/09/03.
//  Copyright © 2018 Pranesh. All rights reserved.
//

import Foundation

enum LocalizedString {
        
    static let listTitle = NSLocalizedString("List of Beers", comment: "Title for the beer list view")
}
