//
//  AccessibilityLabel.swift
//  SwiftCollectionView
//
//  Created by Pranesh on 2018/08/31.
//  Copyright © 2018 Pranesh. All rights reserved.
//

import Foundation

enum AccessibilityLabel {
    static let beerImageView = NSLocalizedString("The beer image", comment: "Accessibility for the beer image")
    static let beerListCollectionView = NSLocalizedString("Beer list collection view", comment: "Accessibility for the collection view")
}
